changed globle styles: body fix, scrollbar wodth change, tailwind derivatives and popIn keyframes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,28 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    @apply text-center min-h-screen bg-[linear-gradient(to_bottom_right,#001,#005)] flex flex-col items-center text-slate-50;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+::-webkit-scrollbar {
+    width: 0.5rem;
+}
+::-webkit-scrollbar-track {
+    @apply bg-slate-900;
 }
 
-* {
-  box-sizing: border-box;
+::-webkit-scrollbar-thumb {
+    @apply bg-slate-50 rounded-full;
+    
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+@keyframes popIn {
+    from {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
 }
